XmlDslParser/src/main/java/net/littlexfish/xmldslparser/antlr/XmlDslParser.java
// Generated from C:/LF/Development/IDEAProject/XmlDsl/antlr/XmlDslParser.g4 by ANTLR 4.13.1
package net.littlexfish.xmldslparser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class XmlDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DelimitedComment=1, LineComment=2, WS=3, NL=4, DOT=5, COMMA=6, LPAREN=7, 
		RPAREN=8, LSQUARE=9, RSQUARE=10, LCURL=11, RCURL=12, MULT=13, MOD=14, 
		DIV=15, ADD=16, SUB=17, CONJ=18, DISJ=19, EXCL=20, COLON=21, SEMICOLON=22, 
		ASSIGNMENT=23, ADD_ASSIGNMENT=24, SUB_ASSIGNMENT=25, MULT_ASSIGNMENT=26, 
		DIV_ASSIGNMENT=27, MOD_ASSIGNMENT=28, RANGE=29, HASH=30, AT=31, QUEST=32, 
		LANGLE=33, RANGLE=34, LE=35, GE=36, EXCL_EQ=37, EQEQ=38, SINGLE_QUOTE_OPEN=39, 
		DOUBLE_QUOTE_OPEN=40, VAL=41, VAR=42, ATTR=43, IF=44, ELSE=45, FOR=46, 
		WHILE=47, EMPTY=48, CONTINUE=49, BREAK=50, IN=51, NOT_IN=52, ANY=53, NUMBER=54, 
		STRING=55, BOOLEAN=56, LIST=57, ELEMENT=58, FUNCTION=59, TYPE=60, SET=61, 
		DICT=62, PAIR=63, ELLIPSIS=64, IMPORT=65, INCLUDE=66, FUN=67, RETURN=68, 
		EXPORT=69, AS=70, AS_SAFE=71, IS=72, NOT_IS=73, VOID=74, NumberLiteral=75, 
		BooleanLiteral=76, NullLiteral=77, Identifier=78, Inside_Comment=79, Inside_WS=80, 
		Inside_NL=81, DOUBLE_QUOTE_CLOSE=82, StrText=83, StrEscapedChar=84, StrRef=85, 
		StrExprStart=86, StrLineNL=87, SINGLE_QUOTE_CLOSE=88, Single_StrLineNL=89, 
		StrExpr_Comment=90, StrExpr_WS=91, StrExpr_NL=92;
	public static final int
		RULE_dslFile = 0, RULE_anysemi = 1, RULE_elementDeclaration = 2, RULE_identifier = 3, 
		RULE_block = 4, RULE_statements = 5, RULE_statement = 6, RULE_declaration = 7, 
		RULE_propertyDeclaration = 8, RULE_assignmentExpression = 9, RULE_expression = 10, 
		RULE_flowExpression = 11, RULE_disjunction = 12, RULE_conjunction = 13, 
		RULE_equalityComparison = 14, RULE_comparison = 15, RULE_inExpression = 16, 
		RULE_rangeExpression = 17, RULE_additiveExpression = 18, RULE_multiplicativeExpression = 19, 
		RULE_prefixUnaryExpression = 20, RULE_prefixUnaryOperation = 21, RULE_postfixUnaryExpression = 22, 
		RULE_atomicExpression = 23, RULE_parenthesizedExpression = 24, RULE_literalConstant = 25, 
		RULE_stringLiteral = 26, RULE_stringContent = 27, RULE_stringExpression = 28, 
		RULE_ifExpression = 29, RULE_jumpExpression = 30, RULE_loopExpression = 31, 
		RULE_forExpression = 32, RULE_whileExpression = 33, RULE_listLiteral = 34, 
		RULE_dictLiteral = 35, RULE_dictEntry = 36, RULE_setLiteral = 37, RULE_postfixUnaryOperation = 38, 
		RULE_listAccess = 39, RULE_functionCall = 40, RULE_multiplicativeOperation = 41, 
		RULE_additiveOperator = 42, RULE_inOperator = 43, RULE_comparisonOperator = 44, 
		RULE_equalityOperation = 45, RULE_assignmentOperator = 46, RULE_functionDeclaration = 47, 
		RULE_functionParameters = 48, RULE_type = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"dslFile", "anysemi", "elementDeclaration", "identifier", "block", "statements", 
			"statement", "declaration", "propertyDeclaration", "assignmentExpression", 
			"expression", "flowExpression", "disjunction", "conjunction", "equalityComparison", 
			"comparison", "inExpression", "rangeExpression", "additiveExpression", 
			"multiplicativeExpression", "prefixUnaryExpression", "prefixUnaryOperation", 
			"postfixUnaryExpression", "atomicExpression", "parenthesizedExpression", 
			"literalConstant", "stringLiteral", "stringContent", "stringExpression", 
			"ifExpression", "jumpExpression", "loopExpression", "forExpression", 
			"whileExpression", "listLiteral", "dictLiteral", "dictEntry", "setLiteral", 
			"postfixUnaryOperation", "listAccess", "functionCall", "multiplicativeOperation", 
			"additiveOperator", "inOperator", "comparisonOperator", "equalityOperation", 
			"assignmentOperator", "functionDeclaration", "functionParameters", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'.'", "','", "'('", null, "'['", null, 
			"'{'", "'}'", "'*'", "'%'", "'/'", "'+'", "'-'", "'&&'", "'||'", "'!'", 
			"':'", "';'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'..'", 
			"'#'", "'@'", "'?'", "'<'", "'>'", "'<='", "'>='", "'!='", "'=='", null, 
			null, "'val'", "'var'", "'attr'", "'if'", "'else'", "'for'", "'while'", 
			"'empty'", "'continue'", "'break'", "'in'", null, "'any'", "'number'", 
			"'string'", "'boolean'", "'list'", "'element'", "'function'", "'type'", 
			"'set'", "'dict'", "'pair'", "'...'", "'import'", "'include'", "'fun'", 
			"'return'", "'export'", "'as'", "'as?'", "'is'", null, "'void'", null, 
			null, "'null'", null, null, null, null, null, null, null, null, "'${'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DelimitedComment", "LineComment", "WS", "NL", "DOT", "COMMA", 
			"LPAREN", "RPAREN", "LSQUARE", "RSQUARE", "LCURL", "RCURL", "MULT", "MOD", 
			"DIV", "ADD", "SUB", "CONJ", "DISJ", "EXCL", "COLON", "SEMICOLON", "ASSIGNMENT", 
			"ADD_ASSIGNMENT", "SUB_ASSIGNMENT", "MULT_ASSIGNMENT", "DIV_ASSIGNMENT", 
			"MOD_ASSIGNMENT", "RANGE", "HASH", "AT", "QUEST", "LANGLE", "RANGLE", 
			"LE", "GE", "EXCL_EQ", "EQEQ", "SINGLE_QUOTE_OPEN", "DOUBLE_QUOTE_OPEN", 
			"VAL", "VAR", "ATTR", "IF", "ELSE", "FOR", "WHILE", "EMPTY", "CONTINUE", 
			"BREAK", "IN", "NOT_IN", "ANY", "NUMBER", "STRING", "BOOLEAN", "LIST", 
			"ELEMENT", "FUNCTION", "TYPE", "SET", "DICT", "PAIR", "ELLIPSIS", "IMPORT", 
			"INCLUDE", "FUN", "RETURN", "EXPORT", "AS", "AS_SAFE", "IS", "NOT_IS", 
			"VOID", "NumberLiteral", "BooleanLiteral", "NullLiteral", "Identifier", 
			"Inside_Comment", "Inside_WS", "Inside_NL", "DOUBLE_QUOTE_CLOSE", "StrText", 
			"StrEscapedChar", "StrRef", "StrExprStart", "StrLineNL", "SINGLE_QUOTE_CLOSE", 
			"Single_StrLineNL", "StrExpr_Comment", "StrExpr_WS", "StrExpr_NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XmlDslParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XmlDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DslFileContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(XmlDslParser.EOF, 0); }
		public DslFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dslFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterDslFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitDslFile(this);
		}
	}

	public final DslFileContext dslFile() throws RecognitionException {
		DslFileContext _localctx = new DslFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dslFile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			statements();
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnysemiContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(XmlDslParser.NL, 0); }
		public TerminalNode SEMICOLON() { return getToken(XmlDslParser.SEMICOLON, 0); }
		public AnysemiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anysemi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterAnysemi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitAnysemi(this);
		}
	}

	public final AnysemiContext anysemi() throws RecognitionException {
		AnysemiContext _localctx = new AnysemiContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_anysemi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !(_la==NL || _la==SEMICOLON) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementDeclarationContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(XmlDslParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(XmlDslParser.NL, i);
		}
		public ElementDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterElementDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitElementDeclaration(this);
		}
	}

	public final ElementDeclarationContext elementDeclaration() throws RecognitionException {
		ElementDeclarationContext _localctx = new ElementDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_elementDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			identifier();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(106);
				match(NL);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(XmlDslParser.Identifier, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LCURL() { return getToken(XmlDslParser.LCURL, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RCURL() { return getToken(XmlDslParser.RCURL, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(LCURL);
			setState(117);
			statements();
			setState(118);
			match(RCURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public List<AnysemiContext> anysemi() {
			return getRuleContexts(AnysemiContext.class);
		}
		public AnysemiContext anysemi(int i) {
			return getRuleContext(AnysemiContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL || _la==SEMICOLON) {
				{
				{
				setState(120);
				anysemi();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -6791124977776000L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 3843L) != 0)) {
				{
				setState(126);
				statement();
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL || _la==SEMICOLON) {
					{
					{
					setState(128); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(127);
							anysemi();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(130); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -6791124977776000L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 3843L) != 0)) {
						{
						setState(132);
						statement();
						}
					}

					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FlowExpressionContext flowExpression() {
			return getRuleContext(FlowExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				assignmentExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				expression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				flowExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public PropertyDeclarationContext propertyDeclaration() {
			return getRuleContext(PropertyDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAL:
			case VAR:
			case ATTR:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				propertyDeclaration();
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				functionDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyDeclarationContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode VAL() { return getToken(XmlDslParser.VAL, 0); }
		public TerminalNode VAR() { return getToken(XmlDslParser.VAR, 0); }
		public TerminalNode ATTR() { return getToken(XmlDslParser.ATTR, 0); }
		public List<TerminalNode> NL() { return getTokens(XmlDslParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(XmlDslParser.NL, i);
		}
		public TerminalNode ASSIGNMENT() { return getToken(XmlDslParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PropertyDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterPropertyDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitPropertyDeclaration(this);
		}
	}

	public final PropertyDeclarationContext propertyDeclaration() throws RecognitionException {
		PropertyDeclarationContext _localctx = new PropertyDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_propertyDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15393162788864L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(153);
				match(NL);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			identifier();
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(160);
					match(NL);
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				match(ASSIGNMENT);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(167);
					match(NL);
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(173);
				expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentExpressionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public AssignmentOperatorContext assignmentOperator() {
			return getRuleContext(AssignmentOperatorContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ListAccessContext listAccess() {
			return getRuleContext(ListAccessContext.class,0);
		}
		public AssignmentExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterAssignmentExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitAssignmentExpression(this);
		}
	}

	public final AssignmentExpressionContext assignmentExpression() throws RecognitionException {
		AssignmentExpressionContext _localctx = new AssignmentExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignmentExpression);
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				identifier();
				setState(177);
				assignmentOperator();
				setState(178);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				identifier();
				setState(181);
				listAccess();
				setState(182);
				assignmentOperator();
				setState(183);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ElementDeclarationContext elementDeclaration() {
			return getRuleContext(ElementDeclarationContext.class,0);
		}
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlDslParserListener ) ((XmlDslParserListener)listener).exitExpression(this);
		}
	}
